# GamePie-Engine

./: .gitignore  .py  README.md  bb.py  gitpush.sh  plttest.spec  pyproject.toml  template-2025-08-10.py
OLD/: image copy.py  rect.py  sprt.py  tools.py
OLD/GUIassets/: main.py
OLD/RPGassets/: main.py  rpg_controller_script.py
OLD/ass1/: main.py
OLD/gui/: conversation.py  exampleLabel.pdn
OLD/input/: microphone.py
RBIN/: .py  .txt  btn copy 2.py  btn copy.py  btn.py  cm.py  ellipse.py  inp.py  mask.py  mc copy.py  mc.py  sur.py  template-2025-08-12.py  template-2025-08-12.spec  text.py
RBIN/RPGassets/: __init__.py
RBIN/ass1/: __init__.py
RBIN/gamepie.egg-info/: top_level.txt
RBIN/gui/: button.py  inputbox.py  message.py
RBIN/transform/: transform.py
src/: animtest.py  bb.py  camtest.py  fg.py  gametest.py  mpp copy.py  mpp.py  mpptest.py  objtest.py  plttest.py  plugtest.py  recttest.py  test1.py  test2.py
src/gamepie/: __init__.py  fonts.txt  pather.py
src/gamepie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gamepie/assets/backstage/: avatar.pdn
src/gamepie/commands/: about.py  build.py
src/gamepie/core/: __init__.py  cam.py  collision.py  color.py  constants.py  event.py  point.py  rect.py  surface.py  time.py  win.py
src/gamepie/core/draw/: __init__.py  anim.py  draw.py  ellipse.py  image.py  line.py  rect.py
src/gamepie/core/draw/gui/: lable.py
src/gamepie/core/load/: audio.py  font.py  frames.py  loadfn.py  texture.py
src/gamepie/plugins/: __init__.py  plugfn.py
src/gamepie/plugins/Controllers/: setup.py
src/gamepie/plugins/GUIassets/: .gpplugin  __init__.py  button_script.py  input_script.py  setup.py
src/gamepie/plugins/SoundsAssets/: setup.py
src/gamepie/plugins/TextureAssets/: setup.py
src/gamepie/utils/: TKmessagebox.py  __init__.py  dict.py  func.py  gpbox.py  math.py  objects.py
src/gpgames/brick_building/: main.py  world.json
(+1 files in other folders)
