[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamepie"
version = "0.1.0"
description = "Library to create 2D games, powered by pygame :: Gamepie YouTube: 'https://www.youtube.com/@gamepieengine'"
readme = "README.md"
authors = [
  { name = "Qller Studio" }
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
  "numpy",
  "pygame",
  "pyinstaller",
  "pillow"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: MS Windows :: Linux"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gamepie" = [
  "assets/*",
  "assets/**/*",
  "gui/*",
  "gui/**/*",
  "input/*",
  "input/**/*",
  "load/*",
  "load/**/*",
  "draw/*",
  "draw/**/*",
  "plugins/*",
  "plugins/**/*"
]
